# lr_implementation

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
lr_implementation/: __init__.py  features.py
lr_implementation/lr_implementation/: dataset.py  plots.py
lr_implementation/modeling/: predict.py  train.py
notebooks/: AT2_implementation.ipynb  prototype_study.ipynb
