[tool.poetry]
name = "lr-implementation"
version = "0.1.0"
description = "Implementation of Logsitic Regression from Scratch"
authors = ["Modawood2023 <muhsindawood123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.2"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
